add aws bullet content

--- a/resume.tex
+++ b/resume.tex
@@ -99,16 +99,16 @@
 	\resumeSubHeadingListStart
 		\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
-			{Bachelor's of Science in Computer Science, Major GPA: 3.63}
+			{Bachelor's of Science in Computer Science, GPA: 3.62}
             {Aug 2020 -- May 2024}
 			\vspace{-3pt}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
-                Graphics \& Systems Engineering/Networking
+                Graphics \& Networking
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Intro to Information Security},
-                \textit{Intro to Information Visualization}, 
-                Systems and Networks, Intro to Databases,
+                \textit{Information Security},
+                \textit{Information Visualization}, 
+                Systems and Networks, Databases,
                 Algorithm Design, Computer Graphics,
                 Computer Architecture, Applied Combinatorics, Linear Algebra,
                 Data Structures \& Algorithms, Object-Orientated Programming
@@ -120,8 +120,16 @@
         \resumeSubheading
             {Amazon Web Services}
             {East Palo Alto, CA}
-            {Incoming Software Development Intern}
+            {OpenSearch Ingestion - Software Development Intern}
             {May 2023 -- Aug 2023}
+            \resumeItemListStart
+                \resumeItem{Improved data ingestion tool's capabilities to enrich and transform
+                data and increased data processing power}
+                \resumeItem{Enhanced customer ability to collect observability data
+                by developing new configurations for the key-value processor}
+                \resumeItem{Implemented user options to include or exclude key-value pairs,
+                mutate values, and recursively parse input data}
+            \resumeItemListEnd
 
         \resumeSubheading
             {Vertically Integrated Projects}
@@ -130,9 +138,9 @@
             {Aug 2022 -- Present}
         \resumeItemListStart
             \resumeItem{Analyzed Georgia Tech population distribution
-            across different majors, credit hours, graduation rates, etc}
-            \resumeItem{Iterated and improved existing dashboard designs
-            already in the provost system}
+            across different majors, credit hours, graduation rates, and more}
+            \resumeItem{Iterated and improved pre-existing dashboard designs
+            in the provost system}
             \resumeItem{Performed UX audits and built design systems to
             create dashboards for new datasets}
             \resumeItem{Led the React subteam to successfully transition
@@ -189,17 +197,15 @@
         \resumeSubheading
             {GT Esports}
             {Atlanta, GA}
-            {Advisor, Vice President, Creative Department Head, Treasurer}
-            {Sep 2020 -- Present}
+            {Advisor, Vice President, Creative Department Head}
+            {Sep 2020 -- May 2023}
         \resumeItemListStart
             \resumeItem{Restructured organization by interviewing/onboarding new
                 staff and creating new procedures}
-            \resumeItem{Boosted and promoted member engagement by implementing
-                policies to increase member participation}
-            \resumeItem{Managed creative team of 7 creating website, social
-                media, and game-specific designs}
-            \resumeItem{Integrated creative department into game sub-organizations
-                to produce ad-hoc graphics for large events}
+            \resumeItem{Boosted and promoted member engagement by leading
+            initiatives to increase organization activity and school presence}
+            \resumeItem{Led creative team to create a website, social
+                media graphics, and game-specific designs}
              \resumeItem{Managed budget and allocated funds for competitive teams, various events,
                 and organization costs}
         \resumeItemListEnd
@@ -243,9 +249,9 @@
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop, Tableau}
 		\resumeSubItem{Technologies}
-			{~~~~Websockets, API, Event Handling, React, Flask}
+			{~~~~React, Websockets, API, Event Handling, Flask}
         \resumeSubItem{Languages}
-			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent)}
+			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent), Korean (beginner)}
         % \resumeSubItem{Certifications}
 		% 	{~~~CCNA (In Progress)}
 	\resumeSubHeadingListEnd
