finetune aws description

--- a/resume.tex
+++ b/resume.tex
@@ -120,11 +120,11 @@
         \resumeSubheading
             {Amazon Web Services}
             {East Palo Alto, CA}
-            {OpenSearch Ingestion - Software Development Intern}
+            {Software Development Intern - OpenSearch Ingestion}
             {May 2023 -- Aug 2023}
             \resumeItemListStart
                 \resumeItem{Improved data ingestion tool's capabilities to enrich and transform
-                data and increased data processing power}
+                data by increasing data processing functionality}
                 \resumeItem{Enhanced customer ability to collect observability data
                 by developing new configurations for the key-value processor}
                 \resumeItem{Implemented user options to include or exclude key-value pairs,
