--- a/resume.tex
+++ b/resume.tex
@@ -106,13 +106,13 @@
 %-----------EDUCATION-----------------
 \section{Education}
 	\resumeSubHeadingListStart
-		\resumeSubheading
-			{Georgia Institute of Technology}{Atlanta, GA}
-			{Master's of Science in Computer Science -- Human-Computer Interaction}
-            {Aug 2024 -- May 2025}
-			\vspace{-3pt}
-			{}
-			{}
+		% \resumeSubheading
+		% 	{Georgia Institute of Technology}{Atlanta, GA}
+		% 	{Master's of Science in Computer Science -- Human-Computer Interaction}
+        %     {Aug 2024 -- May 2025}
+		% 	\vspace{-3pt}
+		% 	{}
+		% 	{}
     	\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
             {Bachelor's of Science in Computer Science, GPA: 3.62}
@@ -143,11 +143,12 @@
             {Software Development Intern - OpenSearch Ingestion}
             {May 2023 -- Aug 2023}
             \resumeItemListStart
-                \resumeItem{Improved data ingestion tool's capabilities to enrich and transform
+                \resumeItem{Deployed advanced key value processor to production environments and 
+                improved data ingestion tool's capabilities to transform
                 data by increasing data processing functionality}
                 \resumeItem{Enhanced customer ability to collect observability data
                 by expanding configurations for the key-value processor}
-                \resumeItem{Implemented user options to include or exclude key-value pairs,
+                \resumeItem{Implemented user options in Java to select key-value pairs,
                 mutate values, and recursively parse input data}
             \resumeItemListEnd
 
@@ -206,35 +207,44 @@
              \resumeItem{Managed budget and allocated funds for competitive teams, various events,
                 and organization costs}
         \resumeItemListEnd
+        \resumeSubheading
+            {GT Symphony Orchestra}
+            {Atlanta, GA}
+            {Clarinetist, Bass Clarinetist}
+            {Aug 2021 -- May 2022}
+        \resumeItemListStart
+            \resumeItem{Participated in weekly rehearsals and sectionals as one of two clarinetists in the highest level orchestra ensemble}
+            \resumeItem{Collaborated with the conductor and fellow musicians to perform two to three concerts per semester}
+        \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
-\section{Projects}
-    \resumeSubHeadingListStart
-    \vspace{1mm}
-        \resumeProjectHeading
-            {gamelettr}
-            {Python, Websockets, Event Handling, REST APIs}
-            {}
-            \resumeItemListStart
-                \resumeItem{Provided quick esports tournament lookup information for
-                    regional and global events through chat bot}
-                \resumeItem{Developed a scheduler to deliver notifications with
-                    a stream link for upcoming matches for ease of viewing}
-                \resumeItem{Integrated with database to persist enduser team preferences, 
-                    configurations, and enabled notifications}
-            \resumeItemListEnd
+% \section{Projects}
+%     \resumeSubHeadingListStart
+%     \vspace{1mm}
+%         \resumeProjectHeading
+%             {gamelettr}
+%             {Python, Websockets, Event Handling, REST APIs}
+%             {}
+%             \resumeItemListStart
+%                 \resumeItem{Provided quick esports tournament lookup information for
+%                     regional and global events through chat bot}
+%                 \resumeItem{Developed a scheduler to deliver notifications with
+%                     a stream link for upcoming matches for ease of viewing}
+%                 \resumeItem{Integrated with database to persist enduser team preferences, 
+%                     configurations, and enabled notifications}
+%             \resumeItemListEnd
 
-        % \resumeProjectHeading
-        %     {Energy Consumption Analysis (2020 HackGT 7)}
-        %     {Dash, Plotly.js, pandas, NumPy}
-        %     {}
-        %     \resumeItemListStart
-        %         \resumeItem{Built to a decision tree anomaly detection model
-        %             built to detect energy usage anomalies}
-        %         \resumeItem{Visualized data output by from decision tree using Plotly
-        %             graphs and a Dash app}
-        %     \resumeItemListEnd
-    \resumeSubHeadingListEnd
+%         % \resumeProjectHeading
+%         %     {Energy Consumption Analysis (2020 HackGT 7)}
+%         %     {Dash, Plotly.js, pandas, NumPy}
+%         %     {}
+%         %     \resumeItemListStart
+%         %         \resumeItem{Built to a decision tree anomaly detection model
+%         %             built to detect energy usage anomalies}
+%         %         \resumeItem{Visualized data output by from decision tree using Plotly
+%         %             graphs and a Dash app}
+%         %     \resumeItemListEnd
+%     \resumeSubHeadingListEnd
 
 \section{Skills Summary}
 	\resumeSubHeadingListStart
@@ -244,7 +254,7 @@
             {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
                 Photoshop, Tableau}
 		\resumeSubItem{Technologies}
-			{~~~~React, Websockets, API, Event Handling, Flask}
+			{~~~~React, D3.js, Websockets, API, Event Handling, Flask}
         \resumeSubItem{Languages}
 			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent), Korean (beginner)}
         % \resumeSubItem{Certifications}
