--- a/resume.tex
+++ b/resume.tex
@@ -143,8 +143,8 @@
             {Software Development Intern - OpenSearch Ingestion}
             {May 2023 -- Aug 2023}
             \resumeItemListStart
-                \resumeItem{Deployed advanced key value processor to production environments and 
-                improved data ingestion tool's capabilities to transform
+                \resumeItem{Deployed advanced key value processor to production environments for use in AWS OpenSearch}
+                \resumeItem{Improved data ingestion tool's capabilities to transform
                 data by increasing data processing functionality}
                 \resumeItem{Enhanced customer ability to collect observability data
                 by expanding configurations for the key-value processor}
