--- a/resume.tex
+++ b/resume.tex
@@ -115,19 +115,20 @@
 		% 	{}
     	\resumeSubheading
 			{Georgia Institute of Technology}{Atlanta, GA}
-            {Bachelor's of Science in Computer Science, GPA: 3.62}
+            {Bachelor's of Science in Computer Science, GPA: 3.73}
             {Aug 2020 -- May 2024}
             \vspace{-3pt}
             {\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
                 Graphics \& Networking
 			}}}
 			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Information Security},
-                \textit{Information Visualization}, 
-                Systems and Networks, 
+                \textit{Computer Networking},
+                Information Security,
+                Information Visualization, 
+                Systems and Networks,
                 Databases,
-                Algorithm Design,
                 \hspace{\linewidth} \hspace*{41pt}
+                Algorithm Design,
                 Computer Graphics,
                 Computer Architecture, 
                 Linear Algebra,
@@ -156,7 +157,7 @@
             {Vertically Integrated Projects}
             {Atlanta, GA}
             {Getting to Know U - Provost Data Dashboard Design}
-            {Aug 2022 -- Present}
+            {Aug 2022 -- Dec 2023}
         \resumeItemListStart
             \resumeItem{Led subteam for large scale project to provide student body with information on classes, majors, clubs, etc.}
             \resumeItem{Managed and conducted code reviews for 8 engineers transitioning
