--- a/resume.tex
+++ b/resume.tex
@@ -98,46 +98,27 @@
 		& 
 	\href{https://github.com/shenkw1}
         {github.com/shenkw1}\\
-    \href{mailto:katherineshen@gatech.edu}
-        {katherineshen@gatech.edu}
+    \href{mailto:katherineshen678@gmail.com}
+        {katherineshen678@gmail.com}
 		&+1 (443) 766-2382 -- U.S. Citizen\\
 \end{tabular*}
 
-%-----------EDUCATION-----------------
-\section{Education}
-	\resumeSubHeadingListStart
-		% \resumeSubheading
-		% 	{Georgia Institute of Technology}{Atlanta, GA}
-		% 	{Master's of Science in Computer Science -- Human-Computer Interaction}
-        %     {Aug 2024 -- May 2025}
-		% 	\vspace{-3pt}
-		% 	{}
-		% 	{}
-    	\resumeSubheading
-			{Georgia Institute of Technology}{Atlanta, GA}
-            {Bachelor's of Science in Computer Science, GPA: 3.73}
-            {Aug 2020 -- May 2024}
-            \vspace{-3pt}
-            {\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
-                Graphics \& Networking
-			}}}
-			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
-                \textit{Computer Networking},
-                Information Security,
-                Information Visualization, 
-                Systems and Networks,
-                Databases,
-                \hspace{\linewidth} \hspace*{41pt}
-                Algorithm Design,
-                Computer Graphics,
-                Computer Architecture, 
-                Linear Algebra,
-                Data Structures \& Algorithms
-			}}}
-	\resumeSubHeadingListEnd
-
+%-----------EXPERIENCE-----------------
 \section{Experience}
 	\resumeSubHeadingListStart
+        \resumeSubheading
+            {Amazon Web Services}
+            {Austin, TX}
+            {Software Development Engineer - OpenSearch Ingestion}
+            {July 2024 -- Present}
+            \resumeItemListStart
+                \resumeItem{Led development of a streamlined pipeline creation interface, driving a complete reduction in configuration errors and adoption by 1.5K pipelines (33\% of total created pipelines)}
+                \resumeItem{Accelerated frontend development by introducing schema-driven UI generation, reducing manual effort by 50\%}
+                \resumeItem{Implemented configuration-aware UI that surfaces required permission options during pipeline construction}
+                \resumeItem{Engineered and performance-tested infrastructure for supporting OTLP ingestion source, achieving rapid adoption with 100 pipelines created within two weeks}
+                \resumeItem{Designed an automated image vulnerability gating system using AWS Lambda, DynamoDB, ECR, and SQS, reducing operational overhead from retroactive patching}
+            \resumeItemListEnd
+
         \resumeSubheading
             {Amazon Web Services}
             {San Francisco, CA}
@@ -193,31 +174,31 @@
         \resumeItemListEnd
 	\resumeSubHeadingListEnd
 
-\section{Extracurriculars}
-	\resumeSubHeadingListStart
-        \resumeSubheading
-            {GT Esports}
-            {Atlanta, GA}
-            {Advisor, Vice President, Creative Department Head}
-            {Sep 2020 -- May 2023}
-        \resumeItemListStart
-            \resumeItem{Boosted member engagement by leading
-            initiatives to increase organization activity and school presence}
-            \resumeItem{Led creative team to create a website, social
-                media graphics, and game-specific designs}
-             \resumeItem{Managed budget and allocated funds for competitive teams, various events,
-                and organization costs}
-        \resumeItemListEnd
-        \resumeSubheading
-            {GT Symphony Orchestra}
-            {Atlanta, GA}
-            {Clarinetist, Bass Clarinetist}
-            {Aug 2021 -- May 2022}
-        \resumeItemListStart
-            \resumeItem{Participated in weekly rehearsals and sectionals as one of two clarinetists in the highest level orchestra ensemble}
-            \resumeItem{Collaborated with the conductor and fellow musicians to perform two to three concerts per semester}
-        \resumeItemListEnd
-	\resumeSubHeadingListEnd
+% \section{Extracurriculars}
+% 	\resumeSubHeadingListStart
+%         \resumeSubheading
+%             {GT Esports}
+%             {Atlanta, GA}
+%             {Advisor, Vice President, Creative Department Head}
+%             {Sep 2020 -- May 2023}
+%         \resumeItemListStart
+%             \resumeItem{Boosted member engagement by leading
+%             initiatives to increase organization activity and school presence}
+%             \resumeItem{Led creative team to create a website, social
+%                 media graphics, and game-specific designs}
+%              \resumeItem{Managed budget and allocated funds for competitive teams, various events,
+%                 and organization costs}
+%         \resumeItemListEnd
+%         \resumeSubheading
+%             {GT Symphony Orchestra}
+%             {Atlanta, GA}
+%             {Clarinetist, Bass Clarinetist}
+%             {Aug 2021 -- May 2022}
+%         \resumeItemListStart
+%             \resumeItem{Participated in weekly rehearsals and sectionals as one of two clarinetists in the highest level orchestra ensemble}
+%             \resumeItem{Collaborated with the conductor and fellow musicians to perform two to three concerts per semester}
+%         \resumeItemListEnd
+% 	\resumeSubHeadingListEnd
 
 % \section{Projects}
 %     \resumeSubHeadingListStart
@@ -247,18 +228,44 @@
 %         %     \resumeItemListEnd
 %     \resumeSubHeadingListEnd
 
-\section{Skills Summary}
+%-----------SKILLS-----------------
+\section{Skills}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, TypeScript, OpenGL, HTML/CSS, SQL, C, \LaTeX, Assembly}
+			{\hspace{0.6mm}~~Python, Java, JavaScript, TypeScript, HTML/CSS, SQL, C, \LaTeX}
 		\resumeSubItem{Tools}
-            {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Trello, Git, Adobe
-                Photoshop, Tableau}
+            {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Git, Adobe Photoshop}
 		\resumeSubItem{Technologies}
-			{~~~~React, D3.js, Websockets, API, Event Handling, Flask}
+			{~~~~React, AWS DynamoDB, AWS CloudWatch, Websockets, API, Event Handling, Flask}
         \resumeSubItem{Languages}
 			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent), Korean (beginner)}
         % \resumeSubItem{Certifications}
 		% 	{~~~CCNA (In Progress)}
+	\resumeSubHeadingListEnd
+
+%-----------EDUCATION-----------------
+\section{Education}
+	\resumeSubHeadingListStart
+    	\resumeSubheading
+			{Georgia Institute of Technology}{Atlanta, GA}
+            {Bachelor's of Science in Computer Science, GPA: 3.73}
+            {Aug 2020 -- May 2024}
+            \vspace{-3pt}
+            {\scriptsize { \footnotesize{\newline{}\textbf{Concentration:}
+                Graphics \& Networking
+			}}}
+			{\scriptsize { \footnotesize{\newline{}\textbf{Courses:}
+                \textit{Computer Networking},
+                Information Security,
+                Information Visualization, 
+                Systems and Networks,
+                Databases,
+                \hspace{\linewidth} \hspace*{41pt}
+                Algorithm Design,
+                Computer Graphics,
+                Computer Architecture, 
+                Linear Algebra,
+                Data Structures \& Algorithms
+			}}}
 	\resumeSubHeadingListEnd
 \end{document}
