--- a/resume.tex
+++ b/resume.tex
@@ -115,7 +115,7 @@
                 \resumeItem{Led development of a streamlined pipeline creation interface, driving a complete reduction in configuration errors and adoption by 1.5K pipelines (33\% of total created pipelines)}
                 \resumeItem{Accelerated frontend development by introducing schema-driven UI generation, reducing manual effort by 50\%}
                 \resumeItem{Implemented configuration-aware UI that surfaces required permission options during pipeline construction}
-                \resumeItem{Engineered and performance-tested infrastructure for supporting OTLP ingestion source, achieving rapid adoption with 100 pipelines created within two weeks}
+                \resumeItem{Engineered and performance-tested infrastructure for supporting OTLP ingestion source, achieving rapid adoption with 100 pipelines created}
                 \resumeItem{Designed an automated image vulnerability gating system using AWS Lambda, DynamoDB, ECR, and SQS, reducing operational overhead from retroactive patching}
             \resumeItemListEnd
 
