adjust amazon content

--- a/resume.tex
+++ b/resume.tex
@@ -112,11 +112,14 @@
             {Software Development Engineer - OpenSearch Ingestion}
             {July 2024 -- Present}
             \resumeItemListStart
-                \resumeItem{Led development of a streamlined pipeline creation interface, driving a complete reduction in configuration errors and adoption by 1.5K pipelines (33\% of total created pipelines)}
-                \resumeItem{Accelerated frontend development by introducing schema-driven UI generation, reducing manual effort by 50\%}
-                \resumeItem{Implemented configuration-aware UI that surfaces required permission options during pipeline construction}
-                \resumeItem{Engineered and performance-tested infrastructure for supporting OTLP ingestion source, achieving rapid adoption with 100 pipelines created}
-                \resumeItem{Designed an automated image vulnerability gating system using AWS Lambda, DynamoDB, ECR, and SQS, reducing operational overhead from retroactive patching}
+                \resumeItem{Led development of a streamlined pipeline creation interface, driving a complete reduction in configuration errors and a 40\% increase in pipeline adoption and revenue}
+                \resumeItem{Actively partnered in UX development by providing domain-driven feedback that directly shaped and informed final design decisions}
+                \resumeItem{Created API-driven, schema-based UI generation to cut manual effort by 50\% while avoiding schema mismatches}
+                \resumeItem{Implemented configuration-aware React/TypeScript UI that surfaces required permissions during pipeline construction, eliminating customer issues from incorrect permissions}
+                \resumeItem{Authored a detailed threat model to ensure secure design and built comprehensive production canaries for OTLP ingestion source in Java, resulting in rapid customer adoption two weeks after release}
+                \resumeItem{Designed an automated image vulnerability detection system using AWS Lambda, DynamoDB, ECR, and SQS, preventing deployment of vulnerable dependencies into production environments}
+                \resumeItem{Contributed to open-source Data Prepper repository by implementing the modulo operator in its expression language, providing customers with more flexible data processing configurations}
+                \resumeItem{Identified and resolved a critical pipeline lifecycle bug where orphaned table resources prevented pipelines from ingesting data properly}
             \resumeItemListEnd
 
         \resumeSubheading
@@ -125,7 +128,7 @@
             {Software Development Intern - OpenSearch Ingestion}
             {May 2023 -- Aug 2023}
             \resumeItemListStart
-                \resumeItem{Deployed advanced key value processor to production environments for use in AWS OpenSearch}
+                \resumeItem{Deployed features for advanced key-value extraction of real-time data to production environments}
                 \resumeItem{Improved data ingestion tool's capabilities to transform
                 data by increasing data processing functionality}
                 \resumeItem{Enhanced customer ability to collect observability data
@@ -143,7 +146,7 @@
             \resumeItem{Led subteam for large scale project to provide student body with information on classes, majors, clubs, etc.}
             \resumeItem{Managed and conducted code reviews for 8 engineers transitioning
                 design wireframes to a user-friendly webapp}
-            \resumeItem{Standardized design systems after rigorous UX audit of existing dashboard designs for future dataset visualization}
+            % \resumeItem{Standardized design systems after rigorous UX audit of existing dashboard designs for future dataset visualization}
         \resumeItemListEnd
 
         \resumeSubheading
@@ -155,8 +158,8 @@
             \resumeItem{Spearheaded development of AI model visualization tool using React, Python, and custom data architecture}
             \resumeItem{Transitioned emergency procedure manual iPad application
             to React webpage with improved user experience}
-            \resumeItem{Developed Python script to parse styling information
-            from Excel sheet database in order to render on webpage}
+            % \resumeItem{Developed Python script to parse styling information
+            % from Excel sheet database in order to render on webpage}
         \resumeItemListEnd
 
         \resumeSubheading
@@ -232,11 +235,11 @@
 \section{Skills}
 	\resumeSubHeadingListStart
 		\resumeSubItem{Programming}
-			{\hspace{0.6mm}~~Python, Java, JavaScript, TypeScript, HTML/CSS, SQL, C, \LaTeX}
+			{\hspace{0.6mm}~~Python, Java, TypeScript, JavaScript, HTML/CSS, SQL, C, \LaTeX}
 		\resumeSubItem{Tools}
-            {\hspace{0.3mm}~~~~~~~~~~~~~~~Figma, Notion, Git, Adobe Photoshop}
+            {\hspace{0.3mm}~~~~~~~~~~~~~~~Kiro, Cline, Figma, Notion, Git, Adobe Photoshop}
 		\resumeSubItem{Technologies}
-			{~~~~React, AWS DynamoDB, AWS CloudWatch, Websockets, API, Event Handling, Flask}
+			{~~~~React, AWS DynamoDB, AWS CloudWatch, AWS Step Functions, AWS CDK, Websockets, API}
         \resumeSubItem{Languages}
 			{\hspace{0.6mm}~~~~~~~English (native), Chinese (fluent), Korean (beginner)}
         % \resumeSubItem{Certifications}
